# auth-app

./: Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: main.rs
